Minor styling fix for dark mode search decks page.

--- a/conquestdb/decks/static/deck_search_style.css
+++ b/conquestdb/decks/static/deck_search_style.css
@@ -77,7 +77,6 @@
 
 #responseMessage {
     margin:auto;
-    background: #f9f9f9;
     display:flex;
     flex-direction:row;
     flex-wrap: wrap;
